tests/baselines/reference/booleanCoercion2.errors.txt
tests/cases/conformance/booleanCoercion/booleanCoercion2.ts(31,9): error TS4111: The type 'true' is disallowed in truthiness position


==== tests/cases/conformance/booleanCoercion/booleanCoercion2.ts (1 errors) ====
    declare const trueValue: true;
    declare let booleanValue: boolean;
    
    while (true) {
        break;
    }
    
    for (; true;) {
        break;
    }
    
    do {
        break;
    } while (true)
    
    while (trueValue) {
        break;
    }
    
    while (booleanValue) {
        break;
    }
    
    while (booleanValue) {
        while (booleanValue) {
            booleanValue = false;
        }
    }
    
    if (booleanValue) {
        if (booleanValue) {
            ~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
            booleanValue = false;
        }
    }
    